# tsp_solver

./: Cargo.toml  LICENSE  README.md  points.json  points10.json  points100.json  points1000.json  points10000.json  points11.json  points12.json  points13.json  points14.json  points15.json  points15_local_solution.json  points15_optimal_solution.json  points16.json  points17.json  points18.json  points19.json  points20.json  points20000.json  points5.json
src/: distance_map.rs  input_parsers.rs  main.rs  multiThreaded.txt  point.rs  priority_queue_structs.rs  query.rs  random_tsp.rs  solution.rs
