[package]
name = "tsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.5.1"  # Use the latest version available
dashmap = "5.5.3"